View Transitions and Endpoint

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -8,6 +8,6 @@
   section {
     padding: 16px;
     border-radius: 16px;
-    background-color: var(--container);
+    background-color: var(--container-high);
   }
 </style>
