--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import RecipeCard from '../components/RecipeCard.astro'
-import Card from '../components/Card.astro'
 const allPosts = await Astro.glob('./recipes/*.md')
 ---
 
 <Layout title="My Recipes">
-	<h2>My Recipes</h2>
+	<h2 class="title">My Recipes</h2>
 	<section class="recipes">
 		{allPosts.map(post =>
 			<RecipeCard post={post}>
@@ -16,6 +15,9 @@ const allPosts = await Astro.glob('./recipes/*.md')
 </Layout>
 
 <style>
+	.title {
+		margin-top: 0;
+	}
 	.recipes {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
