--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -86,4 +86,11 @@ const { title } = Astro.props;
 		padding: 24px 16px 64px 16px;
 		box-sizing: border-box;
 	}
+
+	code {
+		color: var(--primary);
+		padding: 4px 6px;
+		border-radius: 2px;
+		background-color: var(--container-high);
+	}
 </style>
