--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ const allPosts = await Astro.glob('./recipes/*.md')
 ---
 
 <Layout title="My Recipes">
-	<h2 class="title">Astro files</h2>
+	<h2 class="title">Astro Files</h2>
 	<p>
 		All this page was made with just HTML, CSS and JavaScript, using the Astro's
 		special syntaxis.
@@ -15,6 +15,10 @@ const allPosts = await Astro.glob('./recipes/*.md')
 		example, to display all mardowns files of recipes as card, I used 
 		<code>Astro.glob('./recipes/*.md')</code>.
 	</p>
+	<h2>View Transitions</h2>
+	<p>Astro supports view transitions using the routing component 
+		<code>&lt;ViewTransition / &gt;</code> and the transition directives 
+		<code>transition:*</code>.</p>
 	<h2>My Recipes</h2>
 	<section class="recipes">
 		{allPosts.map(post =>
