--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -7,7 +7,7 @@ import '@fontsource-variable/dancing-script'
   <section class="links">
     <a class="link" href="/">Home</a>
     <!-- data-astro-reload: to avoid CSS loading issues -->
-    <a class="link" href="/ducks" data-astro-reload>Ducks</a>
+    <a class="link" href="/ducks">Ducks</a>
   </section>
 </nav>
 
