--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,10 +1,10 @@
 ---
 // Supports weights 300-800
 import '@fontsource-variable/open-sans'
-import { ViewTransitions } from 'astro:transitions';
+import { ViewTransitions } from 'astro:transitions'
 import Navigation from "../components/Navigation.astro"
 import Footer from "../components/Footer.astro"
-const { title } = Astro.props;
+const { title } = Astro.props
 ---
 
 <!doctype html>
