--- a/src/pages/ducks.astro
+++ b/src/pages/ducks.astro
@@ -2,7 +2,9 @@
 import RandomDuck from '../components/RandomDuck'
 import Layout from '../layouts/Layout.astro'
 ---
-<Layout title="Ducks">
+<Layout title="Astro Test: Ducks API"
+  description="Test of endpoints and hydration in Astro"
+  image="/astro.png">
   <h2 class="title">Astro Islands</h2>
   <p>The following section has an interactive component made with React.</p>
   <p>Astro components by default are static but with the template directive 
