--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,18 +4,35 @@ import '@fontsource-variable/open-sans'
 import { ViewTransitions } from 'astro:transitions'
 import Navigation from "../components/Navigation.astro"
 import Footer from "../components/Footer.astro"
-const { title } = Astro.props
+const { title, description, image} = Astro.props
+const URL_VALUE = new URL(Astro.url.pathname, Astro.site)
+const DOMAIN = Astro.site.hostname
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<meta name="description" content={description} />
+		<meta name="robots" content="index, follow">
+		<!-- Facebook Meta Tags -->
+		<meta property="og:url" content={URL_VALUE}>
+		<meta property="og:type" content="website">
+		<meta property="og:title" content={title}>
+		<meta property="og:description" content={description}>
+		<meta property="og:image" content={image}>
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="twitter:domain" content={DOMAIN}>
+		<meta property="twitter:url" content={URL_VALUE}>
+		<meta name="twitter:title" content={title}>
+		<meta name="twitter:description" content={description}>
+		<meta name="twitter:image" content={image}>
+
 		<ViewTransitions />
 	</head>
 	<body>
