--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,7 @@ const DOMAIN = Astro.site.hostname
 		<meta name="twitter:description" content={description}>
 		<meta name="twitter:image" content={image}>
 
+		<meta name="google-site-verification" content="gn-jbDfIQnXgTN8dO95cxpEUgsio9JUJn6uFKZ-2uZo" />
 		<ViewTransitions />
 	</head>
 	<body>
